No latin abbreviations

--- a/docs/tutorials/error-mitigation-with-qiskit-functions.ipynb
+++ b/docs/tutorials/error-mitigation-with-qiskit-functions.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "This tutorial considers a general hardware-efficient Trotterized time evolution circuit for the 2D transverse-field Ising model and computes the global magnetization. Such a circuit is useful in different application domains such as condensed matter physics, chemistry, machine learning etc. For more information on the structure of this model, refer to [Nature 618, 500–505 (2023)](https://www.nature.com/articles/s41586-023-06096-3).\n",
+    "This tutorial considers a general hardware-efficient Trotterized time evolution circuit for the 2D transverse-field Ising model and computes the global magnetization. Such a circuit is useful in different application domains such as condensed matter physics, chemistry, and machine learning. For more information on the structure of this model, refer to [Nature 618, 500–505 (2023)](https://www.nature.com/articles/s41586-023-06096-3).\n",
     "\n",
     "The IBM Circuit function combines capabilities from the Qiskit transpiler service and Qiskit Runtime Estimator to provide a simplified interface for running circuits. The function performs transpilation, error suppression, error mitigation, and circuit execution within a single managed service so that we can focus on mapping the problem to circuits rather than building out each step of the pattern ourselves."
    ]
@@ -103,7 +103,7 @@
    "id": "cece07d0-0a68-4c34-899d-03948e34a5fb",
    "metadata": {},
    "source": [
-    "The circuit we will create is a hardware-efficient, Trotterized time evolution circuit for the 2D transverse-field Ising model. We start with selecting a backend. Properties of this backend (i.e., its coupling map) will be used to define the quantum problem and ensure it is hardware-efficient."
+    "The circuit we will create is a hardware-efficient, Trotterized time evolution circuit for the 2D transverse-field Ising model. We start with selecting a backend. Properties of this backend (that is, its coupling map) will be used to define the quantum problem and ensure it is hardware-efficient."
    ]
   },
   {
@@ -143,7 +143,7 @@
    "id": "70ae3888-4672-4d3f-9ef2-c5590d4601b2",
    "metadata": {},
    "source": [
-    "We want to be careful in how we design the layers of our circuit. We will do this by coloring the edges of the coupling map (i.e., grouping the disjoint edges) and use that coloring to more efficiently place gates in the circuit. This will lead to a shallower circuit with layers of gates that can be executed simultaneously on the hardware."
+    "We want to be careful in how we design the layers of our circuit. We will do this by coloring the edges of the coupling map (that is, grouping the disjoint edges) and use that coloring to more efficiently place gates in the circuit. This will lead to a shallower circuit with layers of gates that can be executed simultaneously on the hardware."
    ]
   },
   {
@@ -330,7 +330,7 @@
    "id": "282e957a-d542-43f5-b4b1-0213f5327789",
    "metadata": {},
    "source": [
-    "The IBM Circuit function takes `pubs`, `backend_name`, as well as optional inputs for configuring transpilation, error mitigation, etc. We create the `pub` from the abstract circuit, observables, and circuit paramters. The name of the backend should be specified as a string."
+    "The IBM Circuit function takes `pubs`, `backend_name`, as well as optional inputs for configuring transpilation, error mitigation, and so on. We create the `pub` from the abstract circuit, observables, and circuit paramters. The name of the backend should be specified as a string."
    ]
   },
   {
