--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -213,7 +213,7 @@
     "    # Reindex to include weekends\n",
     "    data = data.reindex(full_index)\n",
     "\n",
-    "    # Fill missing values (e.g., weekends or holidays) by forward/backward fill\n",
+    "    # Fill missing values (for example, weekends or holidays) by forward/backward fill\n",
     "    data.ffill(inplace=True)\n",
     "    data.bfill(inplace=True)\n",
     "\n",
