--- a/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
+++ b/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "In this notebook, we consider the simulation of a periodic chain of qubits where there is two qubit operation between every two adjacent qubits, including the first and the last ones. Periodic chains are often found in physics and chemistry problems such as Ising models, molecular simulation, etc.\n",
+    "In this notebook, we consider the simulation of a periodic chain of qubits where there is two qubit operation between every two adjacent qubits, including the first and the last ones. Periodic chains are often found in physics and chemistry problems such as Ising models and molecular simulation.\n",
     "\n",
     "Current IBM Quantum&reg; devices are planar. It is possible to embed some periodic chains on the topology directly where the first and last qubits are neighbors. However, for big enough problems, the first and last qubits can be far apart, thus requiring many SWAP gates for the 2-qubit operation between these two qubits. Such a periodic boundary problem has been studied in <a href=\"https://arxiv.org/abs/2402.17833\">this paper</a>.\n",
     "\n",
@@ -598,7 +598,7 @@
     "\n",
     "Instead of applying the entire transpilation process on each of the circuits in the subexperiments, we can use specific transpilation passes. Refer to <a href=\"/docs/api/qiskit/transpiler_passes\">this documentation</a> for a detailed description of all the available transpilation passes.\n",
     "\n",
-    "We shall apply ```BasisTranslator``` and then ```Optimize1qGatesDecomposition``` passes to ensure that all the gates in these circuits belong to the basis gate set. Using these two passes is faster than the entire transpilation process, since other steps such as routing, initial layout selection etc. are not performed again."
+    "We shall apply ```BasisTranslator``` and then ```Optimize1qGatesDecomposition``` passes to ensure that all the gates in these circuits belong to the basis gate set. Using these two passes is faster than the entire transpilation process, since other steps such as routing and initial layout selection are not performed again."
    ]
   },
   {
