--- a/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
+++ b/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
@@ -261,7 +261,7 @@
     "   - `layout_trials=200`\n",
     "   - `swap_trials=200`\n",
     "\n",
-    "By comparing the results of these configurations, we aim to determine which achieves the best balance between circuit quality (e.g., size and depth) and computational cost."
+    "By comparing the results of these configurations, we aim to determine which achieves the best balance between circuit quality (for example, size and depth) and computational cost."
    ]
   },
   {
