--- a/learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb
@@ -340,7 +340,7 @@
     "$$\n",
     "\n",
     "The reason why this works is as follows.\n",
-    "If we again think about vectors as matrices, and this time consider the multiplication $\\langle a \\vert \\vert b \\rangle,$ we obtain a $1\\times 1$ matrix, which we can think about as a scalar (i.e., a number).\n",
+    "If we again think about vectors as matrices, and this time consider the multiplication $\\langle a \\vert \\vert b \\rangle,$ we obtain a $1\\times 1$ matrix, which we can think about as a scalar (that is, a number).\n",
     "For the sake of tidiness, we write this product as $\\langle a \\vert b\\rangle$ rather than $\\langle a \\vert \\vert b \\rangle.$\n",
     "This product satisfies the following simple formula:\n",
     "\n",
