--- a/learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/repetition-codes.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/repetition-codes.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "If nothing goes wrong, we can obviously distinguish the two possibilities for the original bit from their encodings.\n",
     "The point is that if there was an error and one of the three bits flipped, meaning that a 0 changes into a 1 or a 1 changes to a 0, then we can still figure out what the original bit was by determining which of the two binary values appears twice.\n",
-    "Equivalently, we can *decode* by computing the majority value (i.e., the binary value that appears most frequently).\n",
+    "Equivalently, we can *decode* by computing the majority value (that is, the binary value that appears most frequently).\n",
     "\n",
     "$$\n",
     "a b c \\mapsto \\operatorname{majority}(a,b,c)\n",
