--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/shor-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/shor-algorithm.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "These are sets of numbers, but we can think of them as more than sets.\n",
     "In particular, we can think about *arithmetic operations* on $\\mathbb{Z}_N$ such as addition and multiplication — and if we agree to always take our answers modulo $N$\n",
-    "(i.e., divide by $N$ and take the remainder as the result), we'll always stay within this set when we perform these operations.\n",
+    "(that is, divide by $N$ and take the remainder as the result), we'll always stay within this set when we perform these operations.\n",
     "The two specific operations of addition and multiplication, both taken modulo $N,$ turn $\\mathbb{Z}_N$ into a *ring*, which is a fundamentally important type of object in algebra.\n",
     "\n",
     "For example, $3$ and $5$ are elements of $\\mathbb{Z}_7,$ and if we multiply them together we get $3\\cdot 5 = 15,$ which leaves a remainder of $1$ when divided by $7.$\n",
@@ -575,7 +575,7 @@
     "Splitting even integers is easy: we just output $2$ and $N/2.$\n",
     "\n",
     "It's also easy to split perfect powers, meaning numbers of the form $N = s^j$ for integers $s,j\\geq 2,$ just by\n",
-    "approximating the roots $N^{1/2},$ $N^{1/3},$ $N^{1/4},$ etc., and checking nearby integers as suspects for $s.$\n",
+    "approximating the roots $N^{1/2},$ $N^{1/3},$ $N^{1/4},$ and so on, and checking nearby integers as suspects for $s.$\n",
     "We don't need to go further than $\\log(N)$ steps into this sequence, because at that point the root drops below $2$ and won't reveal additional candidates.\n",
     "\n",
     "It's good that we can do both of these things because order finding won't help us to factor even numbers or for *prime* powers, where the number $s$ happens to be prime.\n",
