--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/query-model-of-computation.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/query-model-of-computation.ipynb
@@ -59,7 +59,7 @@
     "- **Parity.** The input function again takes the form $f:\\Sigma^n \\rightarrow \\Sigma.$ The task is to determine whether the number of strings $x\\in\\Sigma^n$ for which $f(x) = 1$ is *even* or *odd*.\n",
     "To be precise, the required output is $0$ if the set $\\{x\\in\\Sigma^n : f(x) = 1\\}$ has an even number of elements and $1$ if it has an odd number of elements. If we think about the function $f$ as representing a sequence of $2^n$ bits to which we have random access, the problem is to compute the parity (or exclusive-OR) of these bits.\n",
     "\n",
-    "- **Minimum.** The input function takes the form $f:\\Sigma^n \\rightarrow \\Sigma^m$ for any choices of positive integers $n$ and $m.$ The required output is the string $y \\in \\{f(x) : x\\in\\Sigma^n\\}$ that comes first in the lexicographic (i.e., dictionary) ordering of $\\Sigma^m.$\n",
+    "- **Minimum.** The input function takes the form $f:\\Sigma^n \\rightarrow \\Sigma^m$ for any choices of positive integers $n$ and $m.$ The required output is the string $y \\in \\{f(x) : x\\in\\Sigma^n\\}$ that comes first in the lexicographic (that is, dictionary) ordering of $\\Sigma^m.$\n",
     "If we think about the function $f$ as representing a sequence of $2^n$ integers encoded as strings of length $m$ in binary notation to which we have random access, the problem is to compute the minimum of these integers.\n",
     "\n",
     "We also consider query problems where we have a *promise* on the input.\n",
