--- a/learning/courses/quantum-business-foundations/quantum-technology.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-technology.mdx
@@ -66,7 +66,7 @@ To better understand Quantum Volume, consider the following interesting analogy.
 
 **Touring the states of Quantum Volume**
 
-Quantum Volume describes the largest quantum computational space that a quantum computer can explore, where the volume of the quantum space is 2<sup>N</sup>, with N being the number of qubits, i.e., the usual state space dimension. We purposely use the word “space” here because once we mention space, it is straightforward to think of a volume.
+Quantum Volume describes the largest quantum computational space that a quantum computer can explore, where the volume of the quantum space is 2<sup>N</sup>, with N being the number of qubits, that is, the usual state space dimension. We purposely use the word “space” here because once we mention space, it is straightforward to think of a volume.
 
 The factor limiting this exploration is the error rate. The error rate may be equated to the amount of time we are allowed to explore the space. More errors mean less time to explore. The more computational space we have, the more time it takes to fully explore the space, and thus we need a quantum computer with a smaller error rate.
 
