--- a/learning/courses/quantum-diagonalization-algorithms/skqd.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/skqd.ipynb
@@ -161,7 +161,7 @@
     "for rep in range(krylov_dim):\n",
     "    circ = qc_state_prep.copy()\n",
     "\n",
-    "    # Repeating the `U` operator to implement U^0, U^1, U^2, etc. for power Krylov space\n",
+    "    # Repeating the `U` operator to implement U^0, U^1, U^2, and so on, for power Krylov space\n",
     "    for _ in range(rep):\n",
     "        circ.compose(other=qc_evol, inplace=True)\n",
     "\n",
@@ -364,7 +364,7 @@
    "id": "104cc0fd-4fa0-469b-bfb8-4089cea5145f",
    "metadata": {},
    "source": [
-    "In principle, we can filter out bitstrings with incorrect pattern before spanning the subspace. For example, the ground state for the antiferromagnetic Hamiltonian in this lesson typically has an equal number of \"up\" and \"down\" spins, i.e., the number of \"1\"s in the bitstring should be exactly half the total number of bits (spins) in the system. The following function filters out bitstrings with incorrect number of \"1\"s from the counts."
+    "In principle, we can filter out bitstrings with incorrect pattern before spanning the subspace. For example, the ground state for the antiferromagnetic Hamiltonian in this lesson typically has an equal number of \"up\" and \"down\" spins, that is, the number of \"1\"s in the bitstring should be exactly half the total number of bits (spins) in the system. The following function filters out bitstrings with incorrect number of \"1\"s from the counts."
    ]
   },
   {
@@ -516,10 +516,10 @@
    "source": [
     "## 5. Summary\n",
     "\n",
-    "- Ground state energy estimations via sampling Krylov basis states is very well-suited to lattice models including spin systems, condensed matter problems, and lattice gauge theories. This approach scales much better than VQE, because it does not require optimization over many parameters in a variational ansatz as in VQE, or in heuristic ansatz-based SQD (e.g., the chemistry problem in the previous lesson).\n",
+    "- Ground state energy estimations via sampling Krylov basis states is very well-suited to lattice models including spin systems, condensed matter problems, and lattice gauge theories. This approach scales much better than VQE, because it does not require optimization over many parameters in a variational ansatz as in VQE, or in heuristic ansatz-based SQD (for example, the chemistry problem in the previous lesson).\n",
     "    - To keep circuit depths low, it is wise to address lattice problems which are amenable to pre-fault tolerant hardware.\n",
     "- SKQD does not incur a quantum measurement problem like in VQE. There are no groups of commuting Pauli operators to be estimated.\n",
-    "- SKQD is robust to noisy samples as one can use a problem-specific post-selection routine (for example, filter out bitstrings that do not adhere to problem-specific patterns) or incur classical diagonalization overhead (i.e., diagonalize in a larger subspace) to effectively remove the effect of noise."
+    "- SKQD is robust to noisy samples as one can use a problem-specific post-selection routine (for example, filter out bitstrings that do not adhere to problem-specific patterns) or incur classical diagonalization overhead (that is, diagonalize in a larger subspace) to effectively remove the effect of noise."
    ]
   },
   {
