--- a/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
+++ b/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
@@ -300,7 +300,7 @@
     "   - Compute the [totient][totient] [$φ$][phi]$(n) = (p-1)*(q-1)$.\n",
     "     - The totient is meant to be kept secret and typically discarded after key generation.\n",
     "   - Choose an integer $e$ such that $1 < e < $[$φ$][phi]$(n)$ and [$gcd$][gcd]$(e, $[$φ$][phi]$(n)) = 1$.\n",
-    "     - i.e. $e$ and [$φ$][phi]$(n)$ should be [coprime][coprime].\n",
+    "     - that is, $e$ and [$φ$][phi]$(n)$ should be [coprime][coprime].\n",
     "     - This number $e$ forms the public key [exponent][exponent] and is typically chosen as a small number for computational efficiency.\n",
     "     - The prime number $65537 = 2^{16} + 1$ is often used.\n",
     "     - Compute $d$ to satisfy the [congruence relation][congrel] $d*e ≡ 1 ($[$mod$][modulus][$φ$][phi]$(n))$.\n",
@@ -1346,7 +1346,7 @@
     "\n",
     "A simplified high-level outline of Shor's overall scheme for breaking RSA is as follows:\n",
     "\n",
-    "1. Given the modulus $n$, which is published as part of the public key, choose a number $a$ coprime to $n$ i.e., $gcd(a,n) = 1$. Since we know that $n = p*q$ has exactly two prime factors $(p, q)$, almost any number less than $n$ that we pick at random is likely to be coprime to $n$.\n",
+    "1. Given the modulus $n$, which is published as part of the public key, choose a number $a$ coprime to $n$ that is, $gcd(a,n) = 1$. Since we know that $n = p*q$ has exactly two prime factors $(p, q)$, almost any number less than $n$ that we pick at random is likely to be coprime to $n$.\n",
     "\n",
     "2. Having chosen $a$, find the exponent $r$ such that $a^r \\equiv 1 (mod~n)$. This implies $a^r - 1 \\equiv 0 (mod~n)$. The existence of an [exponent][exponent] $r$ such that the above [congruence][congrel] holds is guaranteed by the [periodicity property][period] of [modular exponentiation][modexp].\n",
     "\n",
@@ -1548,7 +1548,7 @@
     "[gnfs]: #definition-tooltip \"General Number Field Sieve - An efficient classical algorithm for factoring large integers.\"\n",
     "[period]: #definition-tooltip \"The interval at which a function repeats itself.\"\n",
     "[poly]: #definition-tooltip \"Scales relative to a power, for example n^3. Grows quicker than linear scaling, but slower than exponential.\"\n",
-    "[polyalg]: #definition-tooltip \"An algorithm which scales similar to logarithmic scaling, i.e. efficiently compared to the size of data. A binary search is a simple example.\"\n",
+    "[polyalg]: #definition-tooltip \"An algorithm which scales similar to logarithmic scaling, that is, efficiently compared to the size of data. A binary search is a simple example.\"\n",
     "[qft]: #definition-tooltip \"A quantum algorithm that can be used to find periodic patterns. Named after the fourier transform in classical physics which can split a signal into a set of sine waves.\"\n",
     "[qpe]: #definition-tooltip \"A quantum algorithm used to estimate phase in qubits, named after phase estimation in classical physics.\"\n",
     "[qubit]: #definition-tooltip \"A quantum bit, the equivalent of a bit in classical computing. A qubit behaves very differently since it can be in superposition, (imagine a combination of states), but once measured the superposition collapses, and the result will be 0 or 1.\"\n",
@@ -1635,7 +1635,7 @@
     "\n",
     "The DLP can be extended to cyclic subgroups as follows:\n",
     "\n",
-    "-   Consider $(\\mathbb{Z}_p)^{\\times}$ defined above and an element $g \\in (\\mathbb{Z}_p)^{\\times}$ of prime order $r$ i.e., $g^r \\equiv 1 (~mod~p)$.\n",
+    "-   Consider $(\\mathbb{Z}_p)^{\\times}$ defined above and an element $g \\in (\\mathbb{Z}_p)^{\\times}$ of prime order $r$ that is, $g^r \\equiv 1 (~mod~p)$.\n",
     "-   The set of integer powers of $g$: $\\{g^k~(mod~p) | 1 \\le k \\le r\\} = \\langle g \\rangle$ is a cyclic subgroup of $(\\mathbb{Z}_p)^{\\times}$ with group order $r$.\n",
     "-   A DLP can be specified on $\\langle g \\rangle$ by choosing a $h \\in \\\\langle g \\rangle$ and asking for $1 \\le a \\le r$ such that $ g^a~(mod~p) = h$\n",
     "\n",
@@ -1936,7 +1936,7 @@
     "\n",
     "   </summary>\n",
     "\n",
-    "   - Verify that $0 \\lt r \\lt q$ and $0 \\lt s \\lt q$, i.e., $r, s$ are valid modulo~q integers.\n",
+    "   - Verify that $0 \\lt r \\lt q$ and $0 \\lt s \\lt q$, that is, $r, s$ are valid modulo~q integers.\n",
     "   - Compute $w = s^{-1}~mod~q$.\n",
     "   - Compute $u_1 = H(m)w~mod~q$.\n",
     "   - Compute $u_2 = rw~mod~q$.\n",
