--- a/learning/courses/quantum-safe-cryptography/cryptographic-hash-functions.ipynb
+++ b/learning/courses/quantum-safe-cryptography/cryptographic-hash-functions.ipynb
@@ -66,7 +66,7 @@
     "A useful CHF should satisfy several key properties:\n",
     "\n",
     "1. **Uniformity:** The digests produced by a CHF should be distributed uniformly and should look random. The aim is to ensure the output leaks no information about the input.\n",
-    "2. **Determinism:** For a given input, a CHF must always produce the same [digest][digest], i.e., it must be deterministic.\n",
+    "2. **Determinism:** For a given input, a CHF must always produce the same [digest][digest], that is, it must be deterministic.\n",
     "3. **Irreversibility:** A CHF is a [*one-way function*][onewayfn] in that, given a digest, it should be infeasible to invert the hashing and obtain the input.\n",
     "4. **Approximate injectivity:** While CHFs are many-to-one functions, they should appear to look like one-to one functions. This is achieved by combining an enormous output space size with the avalanche effect whereby tiny changes in the input lead to wildly divergent digests.  This characteristic is known as approximate injectivity.\n",
     "\n",
