--- a/learning/courses/utility-scale-quantum-computing/error-mitigation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/error-mitigation.ipynb
@@ -647,7 +647,7 @@
    "metadata": {},
    "source": [
     "To know the ideal output in advance, we use compute-uncompute circuits that consist of a first stage where the original circuit $U$ is applied, and a second stage where it is reversed $U^\\dagger$.\n",
-    "Note that the ideal outcome of such circuits will trivially be the input state $|000000\\rangle$, which has the trivial expectation values for any Pauli observables, e.g. $\\langle IIIIIZ \\rangle = 1$."
+    "Note that the ideal outcome of such circuits will trivially be the input state $|000000\\rangle$, which has the trivial expectation values for any Pauli observables, for example, $\\langle IIIIIZ \\rangle = 1$."
    ]
   },
   {
