--- a/learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb
@@ -544,7 +544,7 @@
     "  + \\frac{1}{6} \\vert 3 \\rangle\\biggr).\n",
     "$$\n",
     "\n",
-    "In words, what we've done is to isolate the distinct standard basis vectors for the first system (i.e., the one being measured), tensoring each with the linear combination of standard basis vectors for the second system we get by picking out the entries of the original vector that are consistent with the corresponding classical state of the first system.\n",
+    "In words, what we've done is to isolate the distinct standard basis vectors for the first system (that is, the one being measured), tensoring each with the linear combination of standard basis vectors for the second system we get by picking out the entries of the original vector that are consistent with the corresponding classical state of the first system.\n",
     "A moment's thought reveals that this is always possible, regardless of what vector we started with.\n",
     "\n",
     "Having expressed our probability vector in this way, the effects of measuring the first system become easy to analyze.\n",
