--- a/learning/courses/quantum-diagonalization-algorithms/sqd-overview.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/sqd-overview.ipynb
@@ -30,13 +30,13 @@
     "\n",
     "$H$ is the Hamiltonian of a system, $|\\psi\\rangle$ is the wave function (also known as the eigenstate), and $E$ is an eigenvalue. The eigenvalues of matrix $H$ represent the energy levels of the system. For example, if the system is a molecule, the lowest eigenvalue represents the ground state energy of the molecule. In many problems, we are interested in ground state energy estimation.\n",
     "\n",
-    "By applying exact diagonalization techniques from linear algebra, we can diagonalize the full $H$ matrix. However, the approach becomes computationally expensive (even impossible) as the matrix gets larger. For example, even for small chemical molecules, $H$ can be prohibitively large (e.g., Hamiltonian for the $N_2$ molecule with a cc-PVDZ basis has a dimension of $65780 \\times 65780).$\n",
+    "By applying exact diagonalization techniques from linear algebra, we can diagonalize the full $H$ matrix. However, the approach becomes computationally expensive (even impossible) as the matrix gets larger. For example, even for small chemical molecules, $H$ can be prohibitively large (for example, Hamiltonian for the $N_2$ molecule with a cc-PVDZ basis has a dimension of $65780 \\times 65780).$\n",
     "\n",
     "Fortunately, we do not always need all the eigenvalues and eigenvectors of a Hamiltonian $H$, and therefore, diagonalization of the full matrix is not required in many practical cases. For example, in case of ground state estimation, we are interested in the lowest eigenvalue and the corresponding eigenvector. This allows us to apply the concept of projection onto a (useful) subspace.\n",
     "\n",
     "Consider an $N \\times N$ matrix, $H$, where the complete vector space (Hilbert space) has a dimension of $N$ ($N$ is large). Next, we select a subspace ($\\mathcal{S}$) - which is a subset of the full Hilbert space - of dimension $M$, where $M$ is sufficiently small. After projecting $H$ onto this subspace, the projected matrix (say, $H_\\mathcal{S}$) will be smaller ($M \\times M$). The smaller $H_\\mathcal{S}$ can be diagonalized using a suitable classical numerical method, and generate eigenvalues and eigenvectors for that subspace.\n",
     "\n",
-    "**Note that the subspace must be in _support_ of our target (e.g., ground) eigenstate.** In other words, the projected Hamiltonian $H_\\mathcal{S}$ must be in a subspace that includes the lowest eigenvalue."
+    "**Note that the subspace must be in _support_ of our target (for example, ground) eigenstate.** In other words, the projected Hamiltonian $H_\\mathcal{S}$ must be in a subspace that includes the lowest eigenvalue."
    ]
   },
   {
@@ -75,7 +75,7 @@
     "\\text{GS}_{\\text{exact}} = 0.8 * |011\\rangle + 0.6 * |101\\rangle.\n",
     "$$\n",
     "\n",
-    "i.e., the ground state of the matrix is spanned by two computational basis states (vectors) $\\vert 011 \\rangle$ and $\\vert 101 \\rangle$."
+    "that is, the ground state of the matrix is spanned by two computational basis states (vectors) $\\vert 011 \\rangle$ and $\\vert 101 \\rangle$."
    ]
   },
   {
@@ -145,7 +145,7 @@
     "Next, we will project the matrix $H$ onto different subspaces and check if we can get the exact ground state. In particular, we will project the matrix onto a subspace spanned by:\n",
     "\n",
     "1. exact ground state vectors ($\\vert 011 \\rangle$ and $\\vert 101 \\rangle$).\n",
-    "2. vectors that excludes some or all exact ground state vectors (e.g., $\\vert 000 \\rangle$, $\\vert 011 \\rangle$, and $\\vert 110 \\rangle$).\n",
+    "2. vectors that excludes some or all exact ground state vectors (for example, $\\vert 000 \\rangle$, $\\vert 011 \\rangle$, and $\\vert 110 \\rangle$).\n",
     "3. vectors that include both exact ground state and out-of-ground state (but not all possible vectors in the Hilbert space)."
    ]
   },
@@ -399,7 +399,7 @@
    "id": "88dfda4c-102e-4597-8a81-243df6a03641",
    "metadata": {},
    "source": [
-    "In this case, we again get $-0.5357$ as the minimum eigenvalue which matches with the full matrix (i.e., the exact ground state). Another interesting result is the amplitude of $x_3$ returned by the projection and diagonalization process. The amplitude is $0$, and when we reconstruct the wave function (eigenstate) with computed amplitudes and vectors, we get:\n",
+    "In this case, we again get $-0.5357$ as the minimum eigenvalue which matches with the full matrix (that is, the exact ground state). Another interesting result is the amplitude of $x_3$ returned by the projection and diagonalization process. The amplitude is $0$, and when we reconstruct the wave function (eigenstate) with computed amplitudes and vectors, we get:\n",
     "\n",
     "$$\n",
     "\\vert \\psi \\rangle = 0.8 |011\\rangle + 0.6 |101\\rangle + 0.0 |111\\rangle = 0.8 |011\\rangle + 0.6 |101\\rangle \\left( \\text{exact ground state} \\right)\n",
@@ -426,7 +426,7 @@
     "\n",
     "This is where **quantum computers** come into play. The quantum-classical synergy works as follows in the SQD paradigm:\n",
     "\n",
-    "1. Using a suitable quantum circuit, we try to prepare a state on a quantum computer that will generate basis states on which the target wave function (e.g., ground state) has significant support. The sampled basis states (bitstrings) will span the subspace for Hamiltonian projection.\n",
+    "1. Using a suitable quantum circuit, we try to prepare a state on a quantum computer that will generate basis states on which the target wave function (for example, ground state) has significant support. The sampled basis states (bitstrings) will span the subspace for Hamiltonian projection.\n",
     "2. A classical computer projects the Hamiltonian on to the subspace (spanned by samples/vectors from the quantum computer) and diagonalizes it to compute eigenvalues and eigenvectors using suitable numerical methods."
    ]
   },
@@ -539,7 +539,7 @@
    "source": [
     "The gap between full Hilbert space and feasible subspace dimensions, brings another important aspect of SQD, and that is the sparsity of the wave function. The SQD approach works well for sparse or concentrated wave functions where a small fraction of basis states has non-negligible amplitudes. There are two reasons behind it:\n",
     "\n",
-    "1. If the wave function is broad (i.e., many basis states have non-negligible amplitudes), and we miss out including vectors with target state support in the subspace, we may end up with incorrect eigenvalues and eigenvectors.\n",
+    "1. If the wave function is broad (that is, many basis states have non-negligible amplitudes), and we miss out including vectors with target state support in the subspace, we may end up with incorrect eigenvalues and eigenvectors.\n",
     "2. To avoid the above issue, we need to include many vectors in the subspace. However, the dimension of the projected Hamiltonian is directly related to the subspace dimension. A larger subspace will mean larger Hamiltonian, which may become infeasible to diagonalize.\n",
     "\n",
     "We showcase the issue with the following matrix ($H_{new}$). The lowest eigenvalue of the $H_{new}$ is $-2.2081$, and the corresponding wave function (eigenstate) is broad:\n",
