--- a/learning/modules/computer-science/quantum-key-distribution.ipynb
+++ b/learning/modules/computer-science/quantum-key-distribution.ipynb
@@ -89,7 +89,7 @@
     "- F->U\n",
     "- ...\n",
     "\n",
-    "And so on. To put it mildly, this is not a good key. Keys in which the encrypted and decrypted letters are simply shifted version of the alphabet (like A->B, B->C, etc.) are called \"Caesar shift\" ciphers.\n",
+    "And so on. To put it mildly, this is not a good key. Keys in which the encrypted and decrypted letters are simply shifted version of the alphabet (like A->B and B->C) are called \"Caesar shift\" ciphers.\n",
     "\n",
     "Note that these are very difficult if they are short. In fact, if they are very short, they are indeterminate. Consider:\n",
     "\n",
@@ -156,7 +156,7 @@
     "\n",
     "Step 1: Get a partner, and share a sequence of 4 letters to use as a key. Any class-appropriate 4-letter sequence will do. \\\n",
     "Step 2: Select a 4-letter secret word you want to send to your partner (both partners do this so you send each other different secret words) \\\n",
-    "Step 3: Convert the 4-letter key/pad and each of the 4-letter secret words to numbers using A = 1, B = 2, etc. \\\n",
+    "Step 3: Convert the 4-letter key/pad and each of the 4-letter secret words to numbers using A = 1, B = 2, and so on. \\\n",
     "Step 4: Combine your 4-letter word with the one-time pad using modulo 26 addition. \\\n",
     "Step 5: Hand your partner the sequence of numbers encoding your secret word, and your partner will hand you theirs. \\\n",
     "Step 6: Decode each other’s words using modulo 26 subtraction. \\\n",
