--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -39,7 +39,7 @@ The revision version number will increment for fixes that do not break the exist
 
 ## QPU configuration values
 
-The following is a subset of QPU configuration values available in IBM Quantum Platform and from [Qiskit](/docs/api/qiskit/qiskit.providers.BackendV2).
+The following is a subset of QPU configuration values available in IBM Quantum Platform and from [Qiskit](/docs/api/qiskit-ibm-runtime/ibm-backend).
 
 These values are shown on both the [Compute resources page](https://quantum.cloud.ibm.com/computers) and the details page for each QPU.
 
